Criando a criação do Botão New Account

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,17 @@
             android:backgroundTint="@color/blue_button"
             />
 
+        <Button
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_account_button_text"
+            android:textSize="17sp"
+            android:paddingHorizontal="50dp"
+            android:textColor="@color/blue_button"
+            />
+
+
 
 </LinearLayout>
