--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
             />
 
         <Button
+            android:id="@+id/nww_accont_btn"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
