--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brow">#191919</color>
     <color name="gray">#808080</color>
     <color name="blue_button">#30BBF9</color>
 </resources>
