--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:text="@string/type_content"
             android:textSize="15sp"
             android:textColor="@color/gray"
+            android:layout_marginBottom="30dp"
             />
 
         <Button
