--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -67,6 +67,7 @@
 
         >
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_free"
                 android:layout_width="150dp"
                 android:layout_height="120dp"
                 android:backgroundTint="@color/brow"
@@ -94,11 +95,11 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+            android:id="@+id/card_plan"
             android:layout_width="150dp"
             android:layout_height="120dp"
             android:backgroundTint="@color/brow"
-            app:cardCornerRadius="10dp"
-            >
+            app:cardCornerRadius="10dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -106,7 +107,8 @@
                 android:paddingTop="10dp"
                 android:text="@string/text_plan_card"
                 android:textSize="19sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                />
 
             <TextView
                 android:layout_marginTop="70dp"
