--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".NewAccountActivity">
 
     <ImageView
@@ -20,6 +28,7 @@
         />
 
     <TextView
+        android:id="@+id/text_signature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signature"
@@ -28,7 +37,7 @@
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/back_btn"
         />
 
     <ImageView
@@ -36,14 +45,15 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:src="@drawable/ticket"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_signature"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/information_plan"
         app:layout_constraintVertical_bias="0.12"
         />
 
     <TextView
+        android:id="@+id/information_plan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/details_account"
@@ -55,15 +65,16 @@
         />
 
     <GridLayout
+        android:id="@+id/grid_plan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="35dp"
         android:columnCount="2"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/information_plan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.79"
+        app:layout_constraintBottom_toTopOf="@id/next_btn"
+        app:layout_constraintVertical_bias="0.39"
 
         >
             <androidx.cardview.widget.CardView
@@ -124,16 +135,18 @@
     </GridLayout>
 
     <Button
+        android:id="@+id/next_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_Next"
         android:paddingHorizontal="70dp"
         android:backgroundTint="@color/blue_button"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/grid_plan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.94"
+        app:layout_constraintVertical_bias="0.74"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
