--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="brow">#191919</color>
     <color name="gray">#808080</color>
     <color name="blue_button">#30BBF9</color>
+    <color name="lavender">#8692f7</color>
 </resources>
