--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="gray">#808080</color>
     <color name="blue_button">#30BBF9</color>
     <color name="lavender">#8692f7</color>
+    <color name="red">#FF0000</color>
+
 </resources>
