--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -80,15 +80,18 @@
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textFieldEmail"
+        android:id="@+id/textFieldEmailLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         app:boxStrokeColor="@color/blue_button"
+        app:helperText=""
+        app:helperTextTextColor="@color/red"
 
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textFieldEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
@@ -98,20 +101,23 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textFieldSenha"
+        android:id="@+id/textFieldSenhaLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         app:boxStrokeColor="@color/blue_button"
+        app:helperText=""
+        app:helperTextTextColor="@color/red"
 
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textFieldSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Senha"
-            android:inputType="textPassword"
+            android:inputType="numberPassword"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -127,6 +133,7 @@
         />
 
     <Button
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log in"
