Terminando a criação dos Adapter e populando a lista de filmes com dados ficticios

--- a/app/src/main/res/layout/categoria_item.xml
+++ b/app/src/main/res/layout/categoria_item.xml
@@ -15,4 +15,9 @@
         android:textStyle="bold"
         android:layout_margin="20dp"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView_Filmes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
