--- a/app/src/main/res/layout/activity_movie_main.xml
+++ b/app/src/main/res/layout/activity_movie_main.xml
@@ -15,7 +15,9 @@
         <FrameLayout
             android:id="@+id/fragment_container_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+            />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
